*Fix incorrect binding in base Adapter's bind method. *Add star ratings based on word difficulty. *Implement extension function for ImageView to update stars in utils. *Send word ID to detail screen when CardView is clicked in wordList.

--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -27,5 +27,9 @@
         android:id="@+id/detailFragment"
         android:name="com.bmprj.secondweekproject.ui.detail.DetailFragment"
         android:label="fragment_detail"
-        tools:layout="@layout/fragment_detail" />
+        tools:layout="@layout/fragment_detail" >
+        <argument
+            android:name="wordId"
+            app:argType="integer" />
+    </fragment>
 </navigation>
