Detail screen design partially completed. Details of the word are fetched based on the ID. The back button returns to the originating fragment.

--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -31,6 +31,15 @@
         <argument
             android:name="wordId"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_detailFragment_to_wordListFragment"
+            app:destination="@id/wordListFragment" />
+        <action
+            android:id="@+id/action_detailFragment_to_learnedWordsFragment"
+            app:destination="@id/learnedWordsFragment" />
+        <argument
+            android:name="back"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/splashFragment"
