--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -16,6 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/backButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -28,10 +29,73 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textStyle="bold"
-            android:textSize="17sp"
-            tools:text="@string/learnedWordsTitle"/>
+            android:textSize="17sp"/>
 
     </com.google.android.material.appbar.MaterialToolbar>
+
+    <TextView
+        android:id="@+id/wordText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detailToolbar"
+        tools:text="örünek ing kelime" />
+
+    <TextView
+        android:id="@+id/wordPronounce"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:alpha="0.7"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wordText"
+        tools:text="ökunuşu" />
+
+
+    <TextView
+        android:id="@+id/wordTranslate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="10dp"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/sentence"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="turkçesi" />
+
+    <TextView
+        android:id="@+id/sentence"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:background="#EA9595"
+        android:paddingVertical="15dp"
+        android:paddingStart="20dp"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toTopOf="@+id/sentenceTranslate"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="cümle" />
+
+    <TextView
+        android:id="@+id/sentenceTranslate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="20dp"
+        android:paddingVertical="15dp"
+        android:layout_marginBottom="40dp"
+        android:textSize="17sp"
+        android:background="#EA9595"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="cümle türkçesi" />
+
 
 
 
