--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -23,13 +23,17 @@
             android:background="?android:attr/selectableItemBackground"
             android:src="@drawable/icon_back"/>
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/wordTitle"
+        <TextView
+            android:id="@+id/learnButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:textSize="17sp"/>
+            android:layout_gravity="end"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="15dp"
+            android:textColor="@color/black"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/button_style"
+            android:text="@string/learned"/>
 
     </com.google.android.material.appbar.MaterialToolbar>
 
