--- a/app/src/main/res/layout/word_list_layout.xml
+++ b/app/src/main/res/layout/word_list_layout.xml
@@ -7,7 +7,8 @@
     android:layout_width="195dp"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
-    android:layout_marginTop="15dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="5dp"
     app:cardElevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
