--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav"
-    app:startDestination="@id/splashFragment">
+    app:startDestination="@id/wordListFragment">
 
     <fragment
         android:id="@+id/wordListFragment"
@@ -40,14 +40,5 @@
         <argument
             android:name="back"
             app:argType="string" />
-    </fragment>
-    <fragment
-        android:id="@+id/splashFragment"
-        android:name="com.bmprj.secondweekproject.ui.splash.SplashFragment"
-        android:label="fragment_splash"
-        tools:layout="@layout/fragment_splash" >
-        <action
-            android:id="@+id/action_splashFragment_to_wordListFragment"
-            app:destination="@id/wordListFragment" />
     </fragment>
 </navigation>
