--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.SecondWeekProject" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
@@ -6,4 +6,11 @@
     </style>
 
     <style name="Theme.SecondWeekProject" parent="Base.Theme.SecondWeekProject" />
+
+    <style name="Theme.MySplash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#264264</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/icon_app</item>
+        <item name="postSplashScreenTheme">@style/Theme.SecondWeekProject</item>
+        <item name="windowSplashScreenAnimationDuration">3000</item>
+    </style>
 </resources>
