Implement FAB functionality for adding new words and their details

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -10,7 +10,7 @@
         android:id="@+id/detailToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#EA9595"
+        android:background="@color/toolBarColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -87,7 +87,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:background="#EA9595"
+        android:background="@color/textVColor"
         android:paddingVertical="15dp"
         android:paddingStart="20dp"
         android:textSize="20sp"
@@ -103,7 +103,7 @@
         android:paddingVertical="15dp"
         android:layout_marginBottom="40dp"
         android:textSize="20sp"
-        android:background="#EA9595"
+        android:background="@color/textVColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
