--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="toolBarColor">#E0D2FF</color>
+    <color name="buttonColor">#B695FD</color>
+    <color name="bottomNavColor">#E0D2FF</color>
+    <color name="cardVColor">#EBE2FF</color>
+    <color name="textVColor">#E0D2FF</color>
 </resources>
