--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#54BAE8"/> <!-- Button background color -->
+    <solid android:color="@color/buttonColor"/> <!-- Button background color -->
     <corners android:radius="10dp"/> <!-- Adjust radius for oval shape -->
 </shape>
