--- a/app/src/main/res/layout/word_list_layout.xml
+++ b/app/src/main/res/layout/word_list_layout.xml
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#C0DCF3"
+        android:background="@color/cardVColor"
         android:padding="20dp">
 
         <TextView
