--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,9 +3,9 @@
     <item
         android:id="@+id/wordListFragment"
         android:title="@string/wordListTitle"
-        android:icon="@drawable/ic_launcher_background"/>
+        android:icon="@drawable/icon_word"/>
     <item
         android:id="@+id/learnedWordsFragment"
         android:title="@string/learnedWordsTitle"
-        android:icon="@mipmap/ic_launcher"/>
+        android:icon="@drawable/icon_learned"/>
 </menu>
