handleState move Fragments to BaseFRagment. if have no data in recyclerView, screen centered textView make  visibility gone&visible.

--- a/app/src/main/res/layout/fragment_word_list.xml
+++ b/app/src/main/res/layout/fragment_word_list.xml
@@ -36,6 +36,14 @@
         app:layout_anchor="@id/searchBar"
         tools:ignore="NotSibling">
 
+        <TextView
+            android:id="@+id/searchText"
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/notFound"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/searchRecyclerView"
             android:layout_width="match_parent"
