--- a/app/src/main/res/layout/fragment_learned_words.xml
+++ b/app/src/main/res/layout/fragment_learned_words.xml
@@ -17,6 +17,17 @@
         app:title="@string/learnedWordsTitle"
         app:titleCentered="true" />
 
+    <TextView
+        android:id="@+id/learnText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/nothing"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/learnedRecyc"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/materialToolbar2" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/learnedRecyc"
         android:layout_width="match_parent"
