--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -12,7 +12,9 @@
         tools:layout="@layout/fragment_word_list" >
         <action
             android:id="@+id/action_wordListFragment_to_detailFragment"
-            app:destination="@id/detailFragment" />
+            app:destination="@id/detailFragment"
+            app:enterAnim="@anim/enter_anim"
+            app:popEnterAnim="@anim/exit_anim"/>
     </fragment>
     <fragment
         android:id="@+id/learnedWordsFragment"
@@ -21,7 +23,9 @@
         tools:layout="@layout/fragment_learned_words">
         <action
             android:id="@+id/action_learnedWordsFragment_to_detailFragment"
-            app:destination="@id/detailFragment" />
+            app:destination="@id/detailFragment"
+            app:enterAnim="@anim/enter_anim"
+            app:popEnterAnim="@anim/exit_anim"/>
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
@@ -33,7 +37,7 @@
             app:argType="integer" />
         <action
             android:id="@+id/action_detailFragment_to_wordListFragment"
-            app:destination="@id/wordListFragment" />
+            app:destination="@id/wordListFragment"/>
         <action
             android:id="@+id/action_detailFragment_to_learnedWordsFragment"
             app:destination="@id/learnedWordsFragment" />
